# soptRT

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml  sopt.py
.github/workflows/: CI.yml
backend/: Cargo.toml
backend/src/: main.rs
python/: main.py
python/sopt/: __init__.py  ir.py
rust/: main.rs
src/: compiler.rs  lib.rs  parser.rs  utils.rs
src/dialects/: mod.rs  soptfuse.rs  soptfx.rs
