[package]
name = "sopt_rt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sopt_rt"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
melior = "0.26.1"
pyo3 = "0.27.0"
